Extra Credit changes: Gradient Header and Footer, Grid Margins including font-size in mobile view, Mobile image Height, Social Media Icons including in both footer and header for additional point, Sound Cloud embed, and Youtube embed + correction of size on mobile view for additional points.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ body {
 }
 
 header, footer {
-  background-color: #bc6c25;
+  background: #bc6c25;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #FFD194, #D1913C, #bc6c25);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #FFD194, #D1913C, #bc6c25); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   text-align: left;
 /*  min-width: 500px; */
 }
@@ -25,7 +27,7 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(40%, 1fr) ) ;
   grid-gap: 20px;
-  margin-top: 44px;
+  margin: 44px 40px;
 
   justify-items: center;
   justify-content: center;
@@ -158,21 +160,69 @@ font-family: 'Inconsolata', monospace;
     margin: auto;
   }
 
+.header-icons {
+  height: 100%;
+  font-family: 'Karla', sans-serif;
+  font-size: 14px;
+  display: flex;
+  position: absolute;top: 40px; left: 40px;
+  align-content: center;
+  justify-content: start;
+  color: rgba(255, 255, 255, 0.7);
+}
+
 footer div{
   height: 100%;
   font-family: 'Karla', sans-serif;
   font-size: 14px;
   display: flex;
   align-content: center;
+  justify-content: space-between;
   padding: 10px 20px;
   color: rgba(255, 255, 255, 0.7);
+}
+
+.youtube-embed {
+  position: relative;
+  padding-bottom: 60%;
+  width: 100%;
+  text-align: left;
+}
+
+.youtube-embed iframe {
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  overflow: hidden;
+}
+
+.copyright {
+  margin: auto 0;
+}
+
+.icons {
+  list-style-type: none;
+  display: inline-flex;
+}
+
+.icons a {
+  margin: 0 8px;
+  color: rgb(255, 255, 255, 0.5);
+}
+
+.icons a:hover {
+  color: rgb(255, 255, 255, 0.8);
 }
 
 @media all and (max-width:700px) {
   main {
     grid-template-columns: 1fr;
+    margin: 44px auto;
+  }
+  .description {
+    font-size: 18px;
   }
   img {
-    height: 40vh;
+    height: 30vh;
   }
 }
